     generating output. (Ian Clatworthy)

   * ``Branch.hooks`` now supports ``pre_commit`` hook. The hook's signature
     is documented in BranchHooks constructor. (Nam T. Nguyen, #102747)

  BUG FIXES:

   * ``bzr plugins`` now lists the version number for each plugin in square
     brackets after the path. (Robert Collins, #125421)

   * Suppress warning "integer argument expected, got float" from Paramiko,
     which sometimes caused false test failures.  (Martin Pool)

   * Fix bug in bundle 4 that could cause attempts to write data to wrong
     versionedfile.  (Aaron Bentley)

   * Diffs generated using "diff -p" no longer break the patch parser.
     (Aaron Bentley)

   * get_transport treats an empty possible_transports list the same as a non-
     empty one.  (Aaron Bentley)

   * patch verification for merge directives is reactivated, and works with
     CRLF and CR files.  (Aaron Bentley)

   * Accept ..\ as a path in revision specifiers. This fixes for example
     "-r branch:..\other-branch" on Windows.  (Lukáš Lalinský) 

   * ``BZR_PLUGIN_PATH`` may now contain trailing slashes.
     (Blake Winton, #129299)

   * man page no longer lists hidden options (#131667, Aaron Bentley)

   * ``uncommit --help`` now explains the -r option adequately.  (Daniel
     Watkins, #106726)

   * Error messages are now better formatted with parameters (such as
     filenames) quoted when necessary. This avoids confusion when directory
     names ending in a '.' at the end of messages were confused with a
     full stop that may or not have been there. (Daniel Watkins, #129791)

   * Fix ``status FILE -r X..Y``. (Lukáš Lalinský)

   * If a particular command is an alias, ``help`` will show the alias
     instead of claiming there is no help for said alias. (Daniel Watkins,
     #133548)

   * TreeTransform-based operations, like pull, merge, revert, and branch,
     now roll back if they encounter an error.  (Aaron Bentley, #67699)
